# heartassist

./: .gitignore  ModelCompare.xlsx  README.md  heart-strat.pkl  package-lock.json  scalers.pkl
DjangoAPI/: .env  Dockerfile  HeartPredStudy.py  Jenkinsfile  commands.txt  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  scalers.pkl  vercel.json
DjangoAPI/DjangoAPI/: settings.py  urls.py  wsgi.py
DjangoAPI/DjangoAPI/api/: views.py
DjangoAPI/DjangoAPI/spa/: apps.py  views.py
DjangoAPI/DjangoAPI/staticfiles/: staticfiles.json
DjangoAPI/MyAPI/: admin.py  apps.py  forms.py  heart-strat.pkl  models.py  output.xlsx  serializers.py  urls.py  views.py
DjangoAPI/MyAPI/migrations/: 0001_initial.py  0002_alter_heartdiseaseprediction_age_and_more.py  0002_remove_heartdiseaseprediction_patient_and_more.py  0003_alter_heartdiseaseprediction_user.py  0003_rename_gender_heartdiseaseprediction_sex.py  0004_alter_heartdiseaseprediction_user.py  0005_alter_heartdiseaseprediction_user.py  0006_alter_heartdiseaseprediction_result_and_more.py  0007_alter_heartdiseaseprediction_result_and_more.py  0008_user_is_admin.py  0009_remove_admin_phone_number_remove_doctor_phone_number_and_more.py  0010_alter_heartdiseaseprediction_created_at.py  0011_alter_heartdiseaseprediction_created_at.py  0012_alter_user_email.py  0013_user_image.py  0014_alter_user_image.py  0015_alter_user_image.py
DjangoAPI/nginx/: default.conf
DjangoAPI/svelte-app/: rollup.config.js
DjangoAPI/vuedjangorest/: package-lock.json  package.json
ui/: app.js  (+1 more)
(+31 files in other folders)
