[tool.poetry]
name = "poetry add django whitenoise"
version = "poetry add --dev black"
description = "ds"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "n"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
